# buddy-gym-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  REFACTORING_SUMMARY.md  docker-compose.yaml  fly.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
app/: db.py  main.py  planner.py  progression.py  settings.py
app/handlers/: ask.py  log.py  plan.py  start.py  stats.py  today.py
infra/postgres/: fly.toml
infra/redis/: fly.toml
migrations/: 001_init.sql
scripts/: dev.sh  download_exercisedb.py  reset_db.py  simple_openai_upload.py
src/buddy_gym_bot/: __init__.py  config.py  db.py  exercisedb.py  logging_setup.py  main.py  planner.py  progression.py  settings.py
src/buddy_gym_bot/bot/: command_utils.py  commands_labels.py  i18n.py  main.py  openai_scheduling.py  parsers.py  utils.py
src/buddy_gym_bot/bot/locales/en/: commands.json
src/buddy_gym_bot/bot/locales/en/LC_MESSAGES/: messages.po
src/buddy_gym_bot/bot/locales/ru/: commands.json
src/buddy_gym_bot/bot/locales/ru/LC_MESSAGES/: messages.po
src/buddy_gym_bot/data/: exercises_minified.json
src/buddy_gym_bot/db/: __init__.py  models.py  repo.py
src/buddy_gym_bot/handlers/: alerts.py  ask.py  log.py  plan.py  start.py  stats.py  today.py
src/buddy_gym_bot/migrations/: 001_init.sql  002_reminders.sql  002_rename_tg_id.sql  002_user_plans.sql  003_add_user_handle_tz_units_lang.sql  003_dual_units.sql  004_add_set_completion.sql
src/buddy_gym_bot/server/: main.py
src/buddy_gym_bot/server/routes/: exercises.py  plan.py  schedule.py  share.py  workout.py
src/buddy_gym_bot/services/: __init__.py  openai_service.py  reminder_service.py  workout_service.py
src/buddy_gym_bot/webapp/: app.js  index.html  style.css
tests/: conftest.py  test_ask_handler.py  test_cmd_track_validation.py  test_config.py  test_graceful_shutdown.py  test_logging_setup.py  test_openai_fallback.py  test_openai_scheduling.py  test_plan_render.py  test_progression.py  test_referral.py  test_reminders_persist.py  test_repo_init_db.py  test_schedule_followup.py  test_schedule_route.py  test_schedule_utils.py  test_today_handler.py  test_wave_hello.py
webapp/: README.md  debug-script.js  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/components/ui/: dialog.tsx
webapp/lib/: i18n.ts  utils.ts
webapp/src/: App.tsx  WorkoutTracker.tsx  i18n.ts  main.tsx  styles.css
webapp/src/components/ui/: Button.tsx  Input.tsx
webapp/src/locales/: en.json  ru.json
webapp/styles/: globals.css
