[project]
name = "buddy-gym-bot"
version = "0.2.0"
description = "Telegram buddy gym chatbot"
authors = [
  {name = "Evgenii Vasilenko", email = "evgenii.vasilenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram==3.21.0",
  "psycopg[binary]==3.2.9",
  "python-dotenv==1.1.1",
  "openai>=1.99.2,<2",
  "uvicorn[standard]==0.35.0",
  "fastapi",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "sqlalchemy",
  "greenlet",
  "Pillow",
  "aiosqlite",
  "Babel",
  "apscheduler",
  "httpx[http2]",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "pyright",
]
test = [
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true
exclude = ["src/buddy_gym_bot/migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src/buddy_gym_bot"]
exclude = [
  ".venv",
  "**/__pycache__",
  ".git",
  "src/buddy_gym_bot/migrations",
  "**/site-packages",
  "**/dist",
  "**/build",
  "tests",
  "webapp",
  "infra",
  "migrations",
  "*.pyc",
  "*.pyo",
  "*.pyd",
  ".pytest_cache",
  ".ruff_cache",
  "node_modules",
  "*.egg-info",
  "**/test_*.py",
  "**/tests/**",
  "test_*.py"
]
pythonVersion = "3.13"
pythonPath = ".venv/bin/python3"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportOptionalMemberAccess = "warning"
reportUnknownMemberType = "warning"
useLibraryCodeForTypes = true
extraPaths = [".venv/lib/python3.13/site-packages"]
